# code-quality-suite

./: .gitignore  ARCHITECTURE.md  EXAMPLES.md  LICENSE  PERFORMANCE.md  README.md  TROUBLESHOOTING.md  __init__.py  cq_active_config.json  cq_run_analysis.py  cq_set_config.py  pyproject.toml  requirements.txt
helper_scripts/: __init__.py  api_doc.py  code_metrics.py  dockstring.py  pylint_check.py  readability.py  test_covearge.py  unused.py
utils/: __init__.py  file_discovery.py
